--- a/public/price.html
+++ b/public/price.html
@@ -153,10 +153,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Ideal for weekend projects or short campaigns</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
@@ -175,10 +175,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Ideal for weekend projects or short campaigns</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
@@ -197,13 +197,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Priority customer support</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Access to beta features and experimental tools</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
@@ -222,16 +219,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Priority customer support</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Access to beta features and experimental tools</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Dedicated support agent for personalized assistance</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
@@ -250,19 +241,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Priority customer support</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Access to beta features and experimental tools</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Dedicated support agent for personalized assistance</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Early access to new features before public release</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
@@ -281,22 +263,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Priority customer support</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Access to beta features and experimental tools</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Dedicated support agent for personalized assistance</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Early access to new features before public release</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Monthly one-on-one consultation with BeeBee experts</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
@@ -315,28 +285,10 @@
                             </div>
                             <div class="price-desc"> 
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Full access to all current BeeBee services</p>
+                                <p>Full access to all BeeBee services</p>
                               </div>
                               <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Priority customer support</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Access to beta features and experimental tools</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Dedicated support agent for personalized assistance</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Early access to new features before public release</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Monthly one-on-one consultation with BeeBee experts</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>Exclusive webinars and training sessions</p>
-                              </div>
-                              <div class="price-desc-item"> <span class="line"> </span>
-                                <p>VIP community access for networking with top developers</p>
+                                <p>24/7 technical support</p>
                               </div>
                             </div><a class="btn-purchase btn btn-primary" href="https://t.me/QueeeeeeeeeenBee">Contact Us</a>
                           </div>
