--- a/public/price.html
+++ b/public/price.html
@@ -113,8 +113,8 @@
               <div class="content-wrapper"> 
                 <div class="content-submit"> 
                   <div class="col-12">
-                    <h6 class="content-submit-title">Create Liquidity Pool </h6>
-                    <p class="content-submit-desc">Use the default mode, the cost will be the lowest. Just fill in the contract token and then click "Create Openbook Market"</p>
+                    <h6 class="content-submit-title">Deployer Auto Bot </h6>
+                    <p class="content-submit-desc"> </p>
                     <div class="price-swiper-slider-js">
                       <div class="price-section swiper-wrapper">
                         <div class="swiper-slide">
